--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -1,54 +1,55 @@
-
-
 .link {
-  color: #FFF;
-  text-decoration: none
+  color: #fff;
+  text-decoration: none;
 }
 .link:hover {
-   color: rgb(245, 231, 224)
-
+  color: rgb(245, 231, 224);
 }
 
 .listheader {
-font-size: 13px;
-font-weight: bold;
-background-color: rgb(250, 250, 250)
-  
+  font-size: 13px;
+  font-weight: bold;
+  background-color: rgb(250, 250, 250);
 }
 
-.formBox{
+.formBox {
   border: solid 1px rgb(223, 223, 223);
   border-radius: 5px;
-  padding: 10px
+  padding: 10px;
 }
 
-.arrendada{
+.arrendada {
   display: flex;
   justify-content: space-between;
   background-color: rgb(255, 240, 244);
 }
 
-.disponible{
+.disponible {
   display: flex;
   justify-content: space-between;
-  background-color:rgb(241, 255, 241);
-  
+  background-color: rgb(241, 255, 241);
 }
 
-.inactiva{
+.inactiva {
   display: flex;
   justify-content: space-between;
-  background-color:rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
-tr{
+tr {
   font-size: 11px;
-  
 }
 
-tr:hover{filter: saturate(300%)}
+tr:hover {
+  filter: saturate(300%);
+}
 
-.codeButton{
+.codeButton {
   font-size: 13px;
   font-weight: bold;
+}
+
+.navbar {
+  position: relative;
+  height: 50px;
 }
