--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -76,7 +76,19 @@ tr:hover {
   width: auto;
 }
 
-.form{
-  width: 80%;
-  margin: auto
+.form {
+  width: 90%;
+  margin: auto;
+  
+}
+
+.form-group {
+  display: flex;
+  margin: auto;
+  
+}
+.control-label {
+  text-align: right;
+  padding-right: 15px;
+  align-self: center;
 }
