Save token to session storage

--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -82,6 +82,12 @@ tr:hover {
   margin: auto;
 }
 
+.form-login {
+  width: 30%;
+  margin: auto;
+  background-color: rgb(250, 250, 250);
+}
+
 .form-group {
   display: flex;
   margin: auto;
