--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -72,19 +72,40 @@ body {
   background-color: rgb(250, 250, 250);
 }
 
-.form-group {
-  display: flex;
-  margin: auto;
-}
 .control-label {
-  text-align: right;
-  padding-right: 15px;
-  align-self: center;
+  margin-bottom: 0rem;
+  margin-top: 0.2rem;
+  font-size: 0.95rem;
 }
 
-.pictureBox {
+.detail-title {
+  padding: 0.7rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 800;
+  border: 0.4rem solid gray;
+}
+
+.detail-title h1 {
+  font-weight: 800;
+}
+
+.detail-status {
+  background-color: beige;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+}
+
+.detail-pictures{
+  padding: 0.7rem;
+  border: 0.4rem solid gray;
+  align-items: center;
+  text-align: center;
+
+}
+
+.detail-info{
+  padding: 0.7rem;
+  border: 0.4rem solid gray;
+  align-items: center;
+  text-align: center;
+
 }
