--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -31,7 +31,7 @@ body {
 }
 
 .formBox {
-  border: solid 1px rgb(223, 223, 223);
+  border: solid 1px var(--whitefont);
   border-radius: 5px;
   padding: 10px;
 }
@@ -89,8 +89,8 @@ body {
   font-size: 0.95rem;
 }
 
+
 .detail-title {
- 
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 800;
 }
@@ -110,10 +110,13 @@ body {
   text-align: center;
 }
 
-.detail-pictures {
+.detail-middle-section {
   align-items: center;
   text-align: center;
   padding: 0;
+}
+.detail-img {
+  border: 4px solid var(--whitefont);
 }
 
 .detail-title .detail-info {
@@ -123,5 +126,6 @@ body {
 }
 .detail-blueline {
   background-color: var(--corp_blue);
+  color: var(--whitefont);
   min-height: 3rem;
 }
