works with formik,

--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -129,3 +129,11 @@ body {
   color: var(--whitefont);
   min-height: 3rem;
 }
+
+.error {
+  font-size: 10px;
+  color: var(--corp_red);
+  margin-top: 0.25rem;
+}
+
+
