--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -130,10 +130,6 @@ body {
   min-height: 3rem;
 }
 
-.error {
-  font-size: 10px;
-  color: var(--corp_red);
-  margin-top: 0.25rem;
+.modal-lg{
+  max-width: 1000px;
 }
-
-
