--- a/src/front/styles/app.scss
+++ b/src/front/styles/app.scss
@@ -90,24 +90,23 @@ body {
 }
 
 
-.detail-title {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 800;
-}
+
 
 .detail-title .detail-code h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: var(--corp_blue);
   font-weight: 800;
 }
 
 .detail-title .detail-name h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: var(--corp_red);
   font-weight: 800;
 }
 
-.detail-title .detail-status {
+ .detail-status {
   background-color: var(--background_gray);
-  text-align: center;
+  text-align: left;
 }
 
 .detail-middle-section {
