--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -1,3 +1,97 @@
 /* 
     General Styles
 */
+:root,
+:root.light {
+  --dark-color: #1f2937;
+  --light_color: #3882f6;
+  --whitefont: #f9faf8;
+  --corp_blue: #0047bb;
+  --corp_red: #f63440;
+  --text_gray: #79828e;
+  --background_gray: #f8f9fa;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.link {
+  color: #fff;
+  text-decoration: none;
+}
+.link:hover {
+  color: rgb(245, 231, 224);
+}
+
+.formBox {
+  border: solid 1px var(--whitefont);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.arrendada {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(255, 240, 244);
+}
+
+.disponible {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(241, 255, 241);
+}
+
+.inactiva {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 255);
+}
+
+.table {
+  font-size: small;
+}
+
+.navbar {
+  position: relative;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.appBox {
+  width: 90%;
+  margin: auto;
+}
+
+.appNav {
+  width: auto;
+}
+
+.form {
+  width: 90%;
+  margin: auto;
+}
+
+.form-login {
+  width: 30%;
+  margin: auto;
+  background-color: rgb(250, 250, 250);
+}
+
+.control-label {
+  margin-bottom: 0rem;
+  margin-top: 0.2rem;
+  font-size: 0.95rem;
+}
+
+.modal-lg {
+  max-width: 1000px;
+}
