--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -12,6 +12,8 @@
   --background_ligthgray: #f1f1f1;
   --background_gray: #a7a7a7;
   --background_white: #ffffff;
+  --background_arrendada:  #fff0f4;
+  --background_disponible: #f1fff1;
 }
 
 * {
@@ -33,7 +35,7 @@ body {
 }
 
 .link:hover {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2)
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 .formBox {
@@ -42,27 +44,17 @@ body {
   padding: 10px;
 }
 
-.arrendada {
-  display: flex;
-  justify-content: space-between;
-  background-color: rgb(255, 240, 244);
-  height: 3rem;
-  align-items: center;
+#Arrendada {
+  background-color: var(--background_arrendada);
 }
 
-.disponible {
-  display: flex;
-  justify-content: space-between;
-  background-color: rgb(241, 255, 241);
-  
+#Disponible {
+  background-color: var(--background_disponible);
 }
 
-.inactiva {
-  display: flex;
-  justify-content: space-between;
-  background-color: rgb(255, 255, 255);
+#Inactiva {
+  background-color: var(--background_arrendada)
 }
-
 
 .navbar {
   position: relative;
@@ -75,25 +67,21 @@ body {
   margin-top: 2rem;
 }
 
-
 .appNav {
   width: auto;
 }
 
 .tableBox {
   margin-top: 1rem;
- 
 }
 
-.tableHeader{
-  height: 2rem;
-  align-items: center;
+.tableHeader {
+  background-color: var(--background_ligthgray);
 }
 
 .table > :not(:first-child) {
   border-top: 1px solid currentColor;
 }
-
 
 .form {
   width: 90%;
@@ -117,11 +105,11 @@ body {
 }
 
 .detail-owner-box {
-width: 60%;
-background-color: var(--background_white);
-box-shadow: 0 2px 6px 0 var(--background_gray);
+  width: 60%;
+  background-color: var(--background_white);
+  box-shadow: 0 2px 6px 0 var(--background_gray);
 
-border-radius: 1rem;
+  border-radius: 1rem;
 }
 
 .detail-owner-img {
@@ -130,15 +118,7 @@ border-radius: 1rem;
   background-color: (var(--corp_blue));
 }
 
-.detail-owner-name{
+.detail-owner-name {
   text-align: center;
   align-content: center;
 }
-
-
-
-
-
-
-
-
