--- a/src/front/styles/sidebar.scss
+++ b/src/front/styles/sidebar.scss
@@ -5,7 +5,7 @@
   left: 0;
   top: 60px;
   background-color: (--background_gray);
-  
+
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -35,4 +35,27 @@
 }
 .minimized {
   width: 60px; /* Set the width when the sidebar is minimized */
+}
+
+.sidebar-btn {
+  padding: 0.375rem 0.75rem;
+  width: 140px;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid #0d6efd;
+  padding: 0.575rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
